--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Run guildranking backend
 
 on:
-  schedule:
-    - cron: "0 */6 * * *"   # every 6 hours (UTC)
-  workflow_dispatch:        # allow manual run from Actions tab
+  # schedule:
+  #   - cron: "0 */6 * * *"   # every 6 hours (UTC)
+  workflow_dispatch:        # allow manual run from Actions tab for testing
 
 jobs:
   run-job:
